Set auto-expand replicas for new failure store indices